# bhindex

./: README.md  pyproject.toml
src/bhindex/: __init__.py
src/bhindex/adapters/: __init__.py  cache.py  fetchers.py  http_client.py
src/bhindex/cli/: __init__.py  __main__.py
src/bhindex/core/: config.py  errors.py  logging.py  models.py  urls.py
src/bhindex/dto/: __init__.py  contracts.py
src/bhindex/parsers/: __init__.py  base.py  materials.py  recent.py  registry.py
src/bhindex/services/: __init__.py  container.py  harvest_service.py  search_service.py  session_service.py  stats_service.py
src/bhindex/storage/: db.py  migrations.py  repositories.py  schema.sql  snapshots.py
tests/: conftest.py
tests/fixtures/json/: us24_sessions.json
tests/integration/: test_harvest.py
tests/unit/: test_cache.py  test_http_client.py  test_materials.py  test_recent_parser.py  test_search_service.py  test_storage.py  test_urls.py
